<resources>
    <string name="app_name" translatable="false">TrekMe</string>
    <string name="email_support" translatable="false">plr.devs@gmail.com</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="map_menu_title">Map</string>
    <string name="select_map_menu_title">My maps</string>
    <string name="create_menu_title">Create</string>
    <string name="trails_menu_title">My trails</string>
    <string name="excursion_shortcut">Excursions</string>
    <string name="gps_plus_menu_title">GPS+</string>
    <string name="track_stats_menu_title">Recording stats</string>
    <string name="import_menu_title">Import a map</string>
    <string name="share_menu_title">Receive or send</string>
    <string name="settings_menu_title">Settings</string>
    <string name="shop_menu_title">Shop</string>
    <string name="link_error">The link cannot be opened :/</string>
    <string name="confirm_exit">Click BACK again to exit</string>
    <string name="no_internet">You must be connected to internet to create a map</string>
    <string name="no_storage_perm">TrekMe absolutely needs internal storage access, because it stores maps and other data there. Don\'t worry, it will never attempt to access your private data.\n\nYou can give TrekMe this permission in your Android settings, in Applications > TrekMe.</string>
    <string name="no_location_perm">Without the location permission, most core features of TrekMe won\'t work. Please grant the permission in the app settings.</string>
    <string name="error_title">Error</string>
    <string name="warning_title">Warning</string>
    <string name="solution_title">Solution</string>
    <string name="init_error">TrekMe can\'t create necessary folders, and cannot function properly. If this error persists, consider re-installing the app.</string>
    <string name="bad_storage_status">There is something wrong with your SD card: we can\'t write to it.\nThis has nothing to do with TrekMe, and it won\'t be able to download maps or save changes.</string>
    <string name="storage_read_only">Your SD card is only accessible as read-only. This means we can\'t write to it and TrekMe won\'t be able to download maps or save changes.</string>
    <string name="critical_perm_denied">Please enable required permissions from settings</string>
    <string name="close_dialog">Close</string>
    <string name="cancel_dialog_string">Cancel</string>
    <string name="start_dialog_string">Start</string>
    <string name="understood_dialog">I understand</string>
    <string name="new_text">new</string>
    <string name="settings_show_advanced">Show advanced settings</string>
    <string name="onboarding_map_create">Select a map source.</string>
    <string name="onboarding_center_on_pos">Center on your position using this button</string>
    <string name="onboarding_select_area">Select the area to download</string>
    <string name="offer_gateway_suggest_navigation">IGN maps are available with TrekMe Extended</string>
    <string name="offer_gateway_navigation_button">Go to shop</string>
    <string name="offer_gateway_check_pending">Check pending…</string>
    <string name="offer_gateway_free_trial">Free trial</string>
    <string name="offer_gateway_subscription_must_end">Your subscription to TrekMe Extended must end before you can select the IGN option.</string>
    <string name="service_gpx_record_name">Gpx recording service</string>
    <string name="service_gpx_record_action">GPX recording</string>
    <string name="service_gpx_location_error">Error while requesting your location :(</string>
    <string name="service_gpx_error">Error while saving the GPX file :(</string>
    <string name="requires_location_permission_recording">The \"Allow all the time\" location permission is required to start a recording.</string>
    <string name="service_download_name">Download service</string>
    <string name="service_download_action">Map download</string>
    <string name="service_repair_action">Map repair</string>
    <string name="service_update_action">Map update</string>
    <string name="service_download_finished">Map download finished</string>
    <string name="service_repair_finished">Map repair finished</string>
    <string name="service_update_finished">Map update finished</string>
    <string name="service_download_stop">Stop</string>
    <string name="service_download_bad_storage">TrekMe can\'t write to your internal storage or your SD card. It can be a permission issue. Please check that all permissions of TrekMe are granted, and reboot your phone, if necessary.</string>
    <string name="service_download_already_running">A download is already pending. Please wait for the current download to complete before starting a new one.</string>
    <string name="service_download_missing_api">An unexpected api missing error occurred. Please update TrekMe.</string>
    <string name="service_download_repair_error">This map is not repairable.</string>
    <string name="service_wifip2p_name">Map sharing service</string>
    <string name="service_wifip2p_action">Map send and receive</string>
    <string name="service_beacon_name">Beacon service</string>
    <string name="service_beacon_notification_name">Beacon monitoring</string>
    <string name="service_beacon_stop">Stop</string>
    <string name="requires_location_permission_beacon">The \"Allow all the time\" location permission is required use beacons.</string>
    <string name="service_track_follow_name">Track follow service</string>
    <string name="service_track_follow_notification_name">Track follow monitoring</string>
    <string name="service_track_follow_stop">Stop</string>
    <string name="requires_location_permission_track_follow">The \"Allow all the time\" location permission is required to follow a track.</string>
    <string name="map_download_dialog_title">Current map download</string>
    <string name="map_download_dialog_progress">Progress</string>
    <string name="map_download_dialog_error">An error occurred during map import. The map is most probably not visible or not calibrated.\nTry to download it again.</string>
    <string name="fragment_map_list" translatable="false">MapListFragment</string>
    <string name="loading_maps">Loading maps…</string>
    <string name="download_pending_item">Download in progress</string>
    <string name="create_first_map_question">How would you like to create your first map?</string>
    <string name="welcome_screen_or">OR</string>
    <string name="with_onboarding_btn">With onboarding</string>
    <string name="without_onboarding_btn">Without onboarding</string>
    <string name="welcome_excursion_search">Search for excursions</string>
    <string name="ok_dialog">OK</string>
    <string name="no_dialog">No</string>
    <string name="yes_quit_dialog">Yes, QUIT</string>
    <string name="open_dialog">Open</string>
    <string name="allow_dialog">Allow</string>
    <string name="disallow_dialog">Deny</string>
    <string name="delete_dialog">Delete</string>
    <string name="map_manage_btn_string">Edit</string>
    <string name="download_map_dialog_title">Map download</string>
    <string name="download_map_dialog_msg">Downloading %s…</string>
    <string name="map_delete_question">Are you sure to delete this map?</string>
    <string name="choose_map_thumbnail">You can choose a thumbnail image to illustrate your map, it\'ll be prettier!\nContinue?</string>
    <string name="show_map_action">Show</string>
    <string name="download_aborted_warning">Download aborted</string>
    <string name="fragment_settings" translatable="false">SettingsFragment</string>
    <string name="image_preferences_category">Thumbnail image</string>
    <string name="image_change_btn_txt">Change thumbnail image</string>
    <string name="calibration_preferences_category">Calibration</string>
    <string name="projection_preferences_title">Projection</string>
    <string name="points_number_preferences_title">Number of calibration points</string>
    <string name="calibration_button_txt">Define calibration points</string>
    <string name="map_summary_category">Map</string>
    <string name="map_title">Name</string>
    <string name="map_size_string">Size</string>
    <string name="map_save_string">Save</string>
    <string name="preference_change_image_key" translatable="false">pref_image_preference</string>
    <string name="preference_projection_key" translatable="false">pref_projection_preference</string>
    <string name="preference_numpoints_key" translatable="false">pref_points_number_preference</string>
    <string name="preference_map_title_key" translatable="false">pref_map_title_key</string>
    <string name="preference_calibration_button_key" translatable="false">pref_calib_btn_key</string>
    <string name="preference_size_button_key" translatable="false">pref_size_map</string>
    <string name="preference_save_button_key" translatable="false">pref_save_map</string>
    <string name="latitude_short">Lat</string>
    <string name="longitude_short">Lng</string>
    <string name="fragment_map_import" translatable="false">fragment_map_import</string>
    <string name="manage_tracks_menu">Manage tracks</string>
    <string name="import_tracks_warning">The file you chose is not in a supported format. Supported extensions are :</string>
    <string name="import_tracks_format_gpx" translatable="false">GPX (tracks, routes, waypoints)</string>
    <string name="import_tracks_format_google" translatable="false">Google Maps directions (XML, JSON)</string>
    <string name="mapview_show_speed">Show speed</string>
    <string name="mapview_add_marker">Marker</string>
    <string name="mapview_measure_distance">Measure distance</string>
    <string name="marker_name_label">Name</string>
    <string name="wgs84_label">WGS84 coordinates</string>
    <string name="fragment_recording" translatable="false">FragmentRecording</string>
    <string name="mapcreate_zoom_on_position">Zoom on location</string>
    <string name="mapcreate_define_layer">Choose layer</string>
    <string name="mapcreate_overlay_layers">Overlay layers</string>
    <string name="place_search_hint">Search a place</string>
    <string name="add_layer">Add a layer</string>
    <string name="overlay_title">Layer name</string>
    <string name="overlay_opacity">Opacity</string>
    <string name="overlay_empty">No layers added\nUse the button below to add a new layer.</string>
    <string name="fragment_trail_search" translatable="false">TrailSearchFragment</string>
    <string name="general_category">General</string>
    <string name="preference_starton_key" translatable="false">pref_starton</string>
    <string name="preference_starton_title">Start TrekMe on</string>
    <string name="root_folder_category">Root folder</string>
    <string name="preference_root_location_key" translatable="false">pref_download_location</string>
    <string name="preference_root_location_title">Selected folder</string>
    <string name="maps_category">Maps</string>
    <string name="preference_magnifying_factor">Magnifying factor</string>
    <string name="preference_magnifying_key" translatable="false">pref_map_magnifying</string>
    <string name="preference_rotation_mode_key" translatable="false">pref_rotation_mode</string>
    <string name="preference_rotation_mode">Rotation mode</string>
    <string name="user_manual_title">User manual</string>
    <string name="user_manual_desc">There\'s a complete user manual where you\'ll find everything you should know about TrekMe.</string>
    <string name="user_manual_btn">See manual</string>
    <string name="fragment_shop" translatable="false">ShopFragment</string>
    <string name="about">About</string>
</resources>