<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general_category">
        <ListPreference
            android:key="@string/preference_starton_key"
            android:title="@string/preference_starton_title"
            android:entries="@array/starton_options"
            android:entryValues="@array/starton_options"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/root_folder_category">

        <ListPreference
            android:key="@string/preference_root_location_key"
            android:title="@string/preference_root_location_title"
            android:entries="@array/empty"
            android:entryValues="@array/empty" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/maps_category">

        <ListPreference
            android:key="@string/preference_magnifying_key"
            android:title="@string/preference_magnifying_factor"
            android:entries="@array/magnifying_factors"
            android:entryValues="@array/magnifying_factors" />

        <ListPreference
            android:key="@string/preference_rotation_mode_key"
            android:title="@string/preference_rotation_mode"
            android:entries="@array/rotation_modes"
            android:entryValues="@array/rotation_modes"/>

        <SeekBarPreference
            android:key="@string/preference_scale_at_center_key"
            android:title="@string/preference_scale_at_center" />
    </PreferenceCategory>
</PreferenceScreen>