<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_select_map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/select_map_menu_title" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_terrain_black_24dp"
            android:title="@string/create_menu_title" />
        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/record_rec"
            android:title="@string/record_menu_title" />
        <item
            android:id="@+id/nav_gps_plus"
            android:icon="@drawable/satellite_variant"
            android:title="@string/gps_plus_menu_title"
            android:visible="false"/>
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/import_30dp"
            android:title="@string/import_menu_title" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share_menu_title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings_menu_title" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/help"
            android:title="@string/about" />
    </group>

</menu>
