<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add_marker_id"
        android:icon="@drawable/ic_add_location_white_24dp"
        android:title="@string/mapview_add_marker"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/manage_tracks_id"
        android:orderInCategory="0"
        android:title="@string/manage_tracks_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/speedometer_id"
        android:icon="@drawable/ic_speedometer"
        android:title="@string/mapview_show_speed"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/distancemeter_id"
        android:checkable="true"
        android:icon="@drawable/math_compass"
        android:title="@string/mapview_measure_distance"
        app:showAsAction="ifRoom" />

</menu>