<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
        android:title="@string/place_search_hint"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/map_layer_menu_id"
        android:icon="@drawable/layers"
        android:title="@string/mapcreate_define_layer"
        app:showAsAction="always" />
    <item
        android:id="@+id/zoom_on_position_id"
        android:icon="@drawable/ic_gps_fixed_24dp"
        app:iconTint="@android:color/white"
        android:title="@string/mapcreate_zoom_on_position"
        app:showAsAction="always" />
    <item
        android:id="@+id/overlay_layers_id"
        android:title="@string/mapcreate_overlay_layers"
        app:showAsAction="never" />
</menu>