<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mapListFragment">

    <fragment
        android:id="@+id/mapListFragment"
        android:name="com.peterlaurence.trekme.features.maplist.presentation.ui.MapListFragment"
        android:label="@string/fragment_map_list">
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.peterlaurence.trekme.features.settings.presentation.ui.SettingsFragment"
        android:label="@string/fragment_settings" />
    <action
        android:id="@+id/action_global_settingsFragment"
        app:destination="@id/settingsFragment"/>
    <fragment
        android:id="@+id/recordFragment"
        android:name="com.peterlaurence.trekme.features.record.presentation.ui.RecordFragment"
        android:label="@string/fragment_recording"/>
    <action android:id="@+id/action_global_recordFragment" app:destination="@id/recordFragment" />
    <fragment
        android:id="@+id/wifiP2pFragment"
        android:name="com.peterlaurence.trekme.features.wifip2p.presentation.ui.WifiP2pFragment"
        android:label="WifiP2pFragment" />
    <action android:id="@+id/action_global_wifiP2pFragment" app:destination="@id/wifiP2pFragment" />
    <fragment
        android:id="@+id/mapImportFragment"
        android:name="com.peterlaurence.trekme.features.mapimport.presentation.ui.MapImportFragment"
        android:label="@string/fragment_map_import" />
    <action android:id="@+id/action_global_mapImportFragment" app:destination="@id/mapImportFragment" />
    <action android:id="@+id/action_global_mapListFragment" app:destination="@id/mapListFragment" />
    <action android:id="@+id/action_global_gpsProFragment" app:destination="@id/gpsProFragment"/>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.peterlaurence.trekme.features.map.presentation.ui.MapFragment"
        android:label="MapFragment" >
    </fragment>
    <action android:id="@+id/action_global_mapFragment" app:destination="@id/mapFragment"/>
    <fragment
        android:id="@+id/shopFragment"
        android:name="com.peterlaurence.trekme.features.shop.presentation.ui.ShopFragment"
        android:label="@string/fragment_shop" /><action android:id="@+id/action_global_shopFragment" app:destination="@id/shopFragment"/>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.peterlaurence.trekme.features.about.presentation.ui.AboutFragment"
        android:label="AboutFragment" />
    <action android:id="@+id/action_global_aboutFragment" app:destination="@id/aboutFragment" />
    <fragment
        android:id="@+id/trailSearchFragment"
        android:name="com.peterlaurence.trekme.features.trailsearch.presentation.ui.TrailSearchFragment"
        android:label="@string/fragment_trail_search" />
    <action android:id="@+id/action_global_trailSearchFragment" app:destination="@id/trailSearchFragment"/>
    <fragment
        android:id="@+id/gpsProFragment"
        android:name="com.peterlaurence.trekme.features.gpspro.presentation.ui.GpsProFragment"
        android:label="GpsProFragment" />
    <fragment
        android:id="@+id/mapCreateFragment"
        android:name="com.peterlaurence.trekme.features.mapcreate.presentation.ui.MapCreateFragment"
        android:label="MapCreateFragment" />
    <action android:id="@+id/action_global_mapCreateFragment" app:destination="@id/mapCreateFragment"/>
</navigation>