<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/marker_name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marker_name_label"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/marker_wgs84_label_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/wgs84_label"
            android:textColor="?android:attr/colorAccent"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/marker_lat_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/latitude_short"
                android:textSize="14sp"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/marker_lon_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/longitude_short"
                android:textSize="14sp"
                android:inputType="numberSigned" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>